--- a/EskeletoHtml-main/css/style.css
+++ b/EskeletoHtml-main/css/style.css
@@ -9,26 +9,28 @@
 }
 
 .contenedor{
-    background-color: bisque;
+    background-color: #ffffff;
     padding: 10px;
     max-width: 60%;
-    border: 2px solid burlywood;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     text-align: justify;
-    box-shadow: 8px 4px 12px 0px #c7c7ff;
-}
-
-.h2{
     text-align: center;
-}
-
-.mapa{
     display: flex;
-    text-align: center;
-    align-items: center;
     justify-content: center;
 }
+
+h1{
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+    font-size: 20px;
+}
+
+
 img{
     width: 600px;
-    height: 800px;
+    height: 800px; 
 }
