--- a/EskeletoHtml-main/css/style.css
+++ b/EskeletoHtml-main/css/style.css
@@ -9,28 +9,41 @@
 }
 
 .contenedor{
-    background-color: #ffffff;
-    padding: 10px;
-    max-width: 60%;
+    margin: 5px;
+    background-size: contain;
+    background-position: center;
+    padding: 40px;
+    max-width: 40%;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     text-align: justify;
+    background-position: center;
+    box-sizing: content-box;
+    display: block;
+    margin: auto;
+    height: auto;
     text-align: center;
+    
+    
+}
+img{
+    width: auto;
+    height: auto; 
+}
+
+.mapa{
     display: flex;
+    text-align: center;
+    align-items: center;
     justify-content: center;
 }
 
-h1{
+.titulo{
     text-align: center;
 }
 
-h2{
+.contenedor2{
     text-align: center;
-    font-size: 20px;
-}
-
-
-img{
-    width: 600px;
-    height: 800px; 
+    align-items: center;
+    justify-content: center;
 }
