--- a/EskeletoHtml-main/css/style.css
+++ b/EskeletoHtml-main/css/style.css
@@ -47,3 +47,13 @@ img{
     align-items: center;
     justify-content: center;
 }
+
+.mapAma{
+    display: flex;
+    text-align: left;
+}
+
+.textoAma{
+    text-align: right;
+    
+}
