--- a/EskeletoHtml-main/css/style.css
+++ b/EskeletoHtml-main/css/style.css
@@ -89,5 +89,20 @@
      
 }
 
-.regresar:{
+.regresar:link,.regresar:visited{
+    color: white;
+    font-size: small;
+    margin: 5%;
+    padding: 10px 18px;
+    text-align: left;
+    border-radius: 12px;
+}
+
+.atras{
+    color: rgb(0, 0, 0);
+    font-size: small;
+    margin: 5%;
+    padding: 10px 18px;
+    text-align: left;
+    border-radius: 12px;
 }
